--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,12 @@ crashlytics-build.properties
 # If the source bank files are kept outside of the StreamingAssets folder then these can be ignored.
 # Log files can be ignored.
 fmod_editor.log
+/Assets/Combat/Ennemies/LAD/*.meta
+/Assets/Combat/Ennemies/LAD/Bomb/*.meta
+/Assets/*.meta
+/Assets/GeneralScripts/*.meta
+/Assets/LeFmod/FmodRogueBot/Assets/*.meta
+/Assets/LeFmod/FmodRogueBot/Metadata/AudioFile/*.meta
+/Assets/LeFmod/FmodRogueBot/Metadata/*.meta
+/Assets/LeFmod/FmodRogueBot/Metadata/ParameterPreset/*.meta
+/Assets/Player/Generals/Scripts/*.meta
