--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,15 @@ fmod_editor.log
 /Assets/LeFmod/FmodRogueBot/Metadata/*.meta
 /Assets/LeFmod/FmodRogueBot/Metadata/ParameterPreset/*.meta
 /Assets/Player/Generals/Scripts/*.meta
+/Assets/Combat/Ennemies/*.meta
+/Assets/Combat/Ennemies/MineEnnemies/*.meta
+/Assets/Combat/Ennemies/MineEnnemies/MineBomberBot/*.meta
+/Assets/Combat/Ennemies/MineEnnemies/MineFlyingBot/*.meta
+/Assets/Combat/General/*.meta
+/Assets/Combat/General/LevelSystem/*.meta
+/Assets/LevelLogic/*.meta
+/Assets/LevelLogic/DamagingZone/*.meta
+/Assets/Scenes/*.meta
+/Assets/Scenes/Demo_Soutenance/*.asset
+/Assets/Scenes/Demo_Soutenance/*.meta
+/Assets/Scenes/SampleScene/*.meta
